web/ProjectWebPage/ticketing-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-web-deploy
  labels:
    app: ticketing-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ticketing-web
  template:
    metadata:
      labels:
        app: ticketing-web
    spec:
      containers:
      - name: nginx-web
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: web-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: web-content
        hostPath:
          path: /opt/web/ProjectWebPage  # <--- 보안이 없는 안전한 경로로 변경!
          type: Directory
